# missao-cibersegura-df

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: finalizar-apresentacao.yml  publicar-captura.yml
.upload/: gameplay-part-00.b64  gameplay-part-01.b64  gameplay-part-02.b64  gameplay-part-03.b64  gameplay-ready.txt  presentation-part-00.b64  presentation-part-01.b64  presentation-part-02.b64  presentation-part-03.b64
docs/: README.md
docs/ai/: uso-de-inteligencia-artificial.md
docs/architecture/: arquitetura.md
docs/cloud/: plano-de-instanciamento-cloud.md
docs/presentation/: roteiro-de-banca-e-simulacao.md
docs/product/: planejamento-de-produto.md
docs/project-management/: planejamento-github.md
docs/requirements/: elicitacao-de-requisitos.md
docs/security/: plano-de-seguranca-da-informacao.md
docs/ux/: plano-ux-ui.md
include/: ameacas.h  config.h  dicas.h  interface.h  jogo.h  mapa.h  personagem.h  salvamento.h  tipos.h
presentation/: pcdf-missao-cibersegura-banca.pptx
scripts/: compilar-windows.bat
src/: ameacas.c  dicas.c  interface.c  jogo.c  main.c  mapa.c  personagem.c  salvamento.c
